--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- title-------------------- -->
     <title>Donate Today</title>
+    <!-- stylesheet----------------- -->
     <link rel="stylesheet" href="./styles/style.css">
+    <!-- font-------------------- -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter&family=Montserrat&family=Open+Sans&family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <!-- Header Section------------------- -->
+    <header class="header">
+        <div class="header-details">
+            <h1 class="header-title">Let’s Help Those Who Are More In Need</h1>
+            <p class="header-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <button class="primary-btn">Donate Now</button>
+        </div>
+    </header>
+    <!-- header section end--------------------- -->
 </body>
 </html>
