added_donate_price

--- a/index.html
+++ b/index.html
@@ -23,5 +23,21 @@
         </div>
     </header>
     <!-- header section end--------------------- -->
+    <!-- Donate Today section start--------------------- -->
+    <main>
+        <section>
+            <div class="donate-today-details">
+                <h1 class="donate-today-title">Donate Today</h1>
+                <p class="donate-today-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+            </div>
+            <div class="donate">
+                <div class="donate-price">100tk</div>
+                <div class="donate-price">200tk</div>
+                <div class="donate-price">500tk</div>
+                <div class="donate-price">1000tk</div>
+                <div class="donate-price">5000tk</div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
