added_amount_details

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,15 +11,19 @@
     <link rel="stylesheet" href="./styles/style.css">
     <!-- font-------------------- -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter&family=Montserrat&family=Open+Sans&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter&family=Montserrat&family=Open+Sans&family=Poppins&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <!-- Header Section------------------- -->
     <header class="header">
         <div class="header-details">
             <h1 class="header-title">Let’s Help Those Who Are More In Need</h1>
-            <p class="header-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <p class="header-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset. No duo populo animal noluisse, enim</p>
             <button class="primary-btn">Donate Now</button>
         </div>
     </header>
@@ -28,16 +33,26 @@
         <section>
             <div class="donate-today-details">
                 <h1 class="donate-today-title">Donate Today</h1>
-                <p class="donate-today-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+                <p class="donate-today-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+                    falli <br> deterruisset. No duo populo animal noluisse, enim</p>
             </div>
             <div class="donate">
-                <div class="donate-price">100tk</div>
-                <div class="donate-price">200tk</div>
-                <div class="donate-price">500tk</div>
-                <div class="donate-price">1000tk</div>
-                <div class="donate-price">5000tk</div>
+                <ul>
+                    <li>100tk</li>
+                    <li>200tk</li>
+                    <li>500tk</li>
+                    <li>1000tk</li>
+                    <li>5000tk</li>
+                </ul>
+            </div>
+            <!-- amount-details---------------- -->
+            <div class="amount-details">
+                <p class="amount">Other Amount (Taka)</p>
+                <hr>
+                <button class="primary-btn">Donate Now</button>
             </div>
         </section>
     </main>
 </body>
+
 </html>
