added_donate_plan

--- a/index.html
+++ b/index.html
@@ -52,6 +52,50 @@
                 <button class="primary-btn">Donate Now</button>
             </div>
         </section>
+        <!-- Our Donate Plan----------------- -->
+        <section>
+            <div class="donate-plan">
+                <h1 class="donate-title">
+                    Our Donate Plan
+                </h1>
+                <p class="donate-description">
+                    Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim
+                </p>
+            </div>
+            <div class="donate-container">
+                <div class="donate-box-1 box">
+                    <img src="./icons/food.png" alt="">
+                    <h3 class="donate-box-title">
+                        Food for a family
+                    </h3 >
+                    <p class="donate-box-description">
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit.
+                    </p>
+                </div>
+                <div class="donate-box-2 box">
+                    <img src="./icons/shelter.png" alt="">
+                    <h3 class="donate-box-title">
+                        Food for a family
+                    </h3>
+                    <p class="donate-box-description">
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit.
+                    </p>
+                </div>
+                <div class="donate-box-3 box">
+                    <img src="./icons/Frame-1.png" alt="">
+                    <h3 class="donate-box-title">
+                        Food for a family
+                    </h3 class="donate-box-title">
+                    <p class="donate-box-description">
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit.
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
